--- a/Layout/Dashboard/pages/homedashboard.html
+++ b/Layout/Dashboard/pages/homedashboard.html
@@ -126,8 +126,13 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="card mb-3 text-white">
                             <div class="card-body customcard1 ">
+                                <!-- Container for the icon -->
+                                <div class="icon-container">
+                                    <!-- Font Awesome icon -->
+                                    <i class="fa-solid fa-users icon-background"></i>
+                                </div>
                                 <h5 class="card-title cadtitle">Total Numbers of Client</h5>
-                                <p class="card-text cadfigur">Some quick example text</p>
+                                <p class="card-text cadfigur">500</p>
                                 <div class="viewmorediv">
                                     <div class="view-more">
                                         <a href="#">View More </a>
@@ -142,6 +147,11 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="card mb-3 text-white">
                             <div class="card-body customcard2 ">
+                                <!-- Container for the icon -->
+                                <div class="icon-container">
+                                    <!-- Font Awesome icon -->
+                                    <i class="fa-solid fa-user icon-background"></i>
+                                </div>
                                 <h5 class="card-title cadtitle">Total Number of Registered User</h5>
                                 <p class="card-text cadfigur">74,106,003</p>
                                 <div class="viewmorediv">
@@ -158,6 +168,11 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="card mb-3 text-white">
                             <div class="card-body customcard3 ">
+                                <!-- Container for the icon -->
+                                <div class="icon-container">
+                                    <!-- Font Awesome icon -->
+                                    <i class="fa-solid fa-desktop icon-background"></i>
+                                </div>
                                 <h5 class="card-title cadtitle">Total Number of Activated Device</h5>
                                 <p class="card-text cadfigur">200</p>
                                 <div class="viewmorediv">
