--- a/Layout/Dashboard/pages/clientDashboard.css
+++ b/Layout/Dashboard/pages/clientDashboard.css
@@ -67,14 +67,7 @@
   color: #fff;
   text-decoration: none;
 }
-.customcard1 {
-  background-color: #27658d;
-  color: #ffffff;
-  border-radius: 5px;
-  width: auto;
-  height: 180px;
-  position: relative;
-}
+
 .cadfigur {
   overflow-wrap: break-word;
   font-family: "Mona Sans";
@@ -128,8 +121,17 @@
   color: #fff;
   opacity: 0.1;
 }
+
+.customcard1 {
+  background-color: #27658d;
+  color: #ffffff;
+  border-radius: 5px;
+  width: auto;
+  height: 180px;
+  position: relative;
+}
 .customcard2 {
-  background-color: #2b9872;
+  background-color: #c00606;
   color: #ffffff;
   border-radius: 5px;
   width: auto;
@@ -137,7 +139,15 @@
   position: relative;
 }
 .customcard3 {
-  background-color: #078d85;
+  background-color: #048055;
+  color: #ffffff;
+  border-radius: 5px;
+  width: auto;
+  height: 180px;
+  position: relative;
+}
+.customcard4 {
+  background-color: #98049f;
   color: #ffffff;
   border-radius: 5px;
   width: auto;
