--- a/Layout/Dashboard/pages/deviceDashboard.css
+++ b/Layout/Dashboard/pages/deviceDashboard.css
@@ -67,14 +67,7 @@
   color: #fff;
   text-decoration: none;
 }
-.customcard1 {
-  background-color: #27658d;
-  color: #ffffff;
-  border-radius: 5px;
-  width: auto;
-  height: 180px;
-  position: relative;
-}
+
 .cadfigur {
   overflow-wrap: break-word;
   font-family: "Mona Sans";
@@ -109,6 +102,10 @@
   color: #fff; /* Link color */
   text-decoration: none; /* Remove underline */
 }
+.icon-container {
+  position: relative;
+}
+
 /* Style for the background icon */
 .icon-background {
   width: 80px;
@@ -128,8 +125,17 @@
   color: #fff;
   opacity: 0.1;
 }
+
+.customcard1 {
+  background-color: #27658d;
+  color: #ffffff;
+  border-radius: 5px;
+  width: auto;
+  height: 180px;
+  position: relative;
+}
 .customcard2 {
-  background-color: #2b9872;
+  background-color: #6306c0;
   color: #ffffff;
   border-radius: 5px;
   width: auto;
@@ -137,6 +143,14 @@
   position: relative;
 }
 .customcard3 {
+  background-color: #98049f;
+  color: #ffffff;
+  border-radius: 5px;
+  width: auto;
+  height: 180px;
+  position: relative;
+}
+.customcard4 {
   background-color: #078d85;
   color: #ffffff;
   border-radius: 5px;
