--- a/Layout/Modal/pages/deleteScheduleModal.html
+++ b/Layout/Modal/pages/deleteScheduleModal.html
@@ -45,9 +45,9 @@
                 <!-- Modal footer -->
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary disablebutton"
+                    <button type="button" class="btn btn-secondary actionbutton"
                         data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger disablebutton" data-bs-dismiss="modal">Delete</button>
+                    <button type="button" class="btn btn-danger actionbutton" data-bs-dismiss="modal">Delete</button>
                 </div>
 
             </div>
