--- a/Layout/Modal/pages/modal.css
+++ b/Layout/Modal/pages/modal.css
@@ -22,6 +22,6 @@
 .modal-footer .btn-danger {
   margin-left: 50px; /* Push "Close" button to the right */
 }
-.disablebutton {
+.actionbutton {
   width: 150px;
 }
