--- a/Layout/Dashboard/pages/clientMgtDashboard.html
+++ b/Layout/Dashboard/pages/clientMgtDashboard.html
@@ -125,7 +125,8 @@
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">Client Management</h1>
                     <div class="clientbtn">
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-plus"></i> Add New
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                            data-bs-target="#myModalClient"><i class="fa-solid fa-plus"></i> Add New
                             Client</button>
                     </div>
                 </div>
@@ -166,6 +167,116 @@
                     </div>
                 </div>
 
+                <!-- The Modal for client-->
+                <div class="modal" id="myModalClient">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Add New Client</h4>
+                                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal"></button> -->
+                            </div>
+
+                            <h5>Client Information</h5>
+
+                            <!-- User profile picture -->
+                            <div class="user-profil">
+                                <input type="file" id="profil-image" accept="image/*" onchange="previewImage(event)">
+                                <img id="profil-image-preview" src="#" alt="upload image" />
+                            </div>
+
+
+                            <!-- Modal body -->
+                            <div class="modal-body modalformbody">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="clientType">Client Type</label>
+                                        <select class="form-select" id="sel1" name="sellist1">
+                                            <option disabled selected>Client Type</option>
+                                            <option>Retailer</option>
+                                            <option>CIT</option>
+                                            <option>Cash Center</option>
+                                            <option>Vault</option>
+
+
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Client Name</label>
+                                        <input type="text" class="form-control" placeholder="Client Name" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Client Email</label>
+                                        <input type="text" class="form-control" placeholder="Client Email" id="name">
+                                        <p>After saved, the initial password will be sent to this email address and
+                                            is copied to super<br /> admin,In case of failure to acquire login password,
+                                            reset on
+                                            edit
+                                            client page.
+                                        </p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Email Suffix</label>
+                                        <input type="text" class="form-control"
+                                            placeholder="e.g firstbank.com, yahoo.com" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Address</label>
+                                        <input type="text" class="form-control" placeholder="your address" id="name">
+                                    </div>
+
+                                    <h5>Contact Information</h5>
+
+                                    <div class="form-group">
+                                        <label for="name">First Name</label>
+                                        <input type="text" class="form-control" placeholder="First Name" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Last Name</label>
+                                        <input type="text" class="form-control" placeholder="Last Name" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Email</label>
+                                        <input type="text" class="form-control" placeholder="Email address" id="name">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="gender">Gender</label>
+                                        <select class="form-select" id="sel1" name="sellist1">
+                                            <option disabled selected>Gender</option>
+                                            <option>Male</option>
+                                            <option>Female</option>
+
+                                        </select>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="name">Address</label>
+                                        <input type="text" class="form-control" placeholder=" Address" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">State</label>
+                                        <input type="text" class="form-control" placeholder="State" id="name">
+                                    </div>
+
+
+                                </form>
+                            </div>
+
+                            <!-- Modal footer -->
+                            <div class="modal-footer ">
+                                <div class="modalformdivbtn">
+                                    <button type="button" class="btn btn-danger modalformbutton "
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-success modalformbutton "
+                                        data-bs-dismiss="modal">Save</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class="table-responsive clienttable">
@@ -183,6 +294,7 @@
                         </thead>
                         <tbody>
                             <tr>
+                                <td><input type="checkbox"></td>
                                 <td></td>
                                 <td></td>
                                 <td>No data available</td>
@@ -212,7 +324,16 @@
         </div>
     </div>
 
-
+    <script>
+        function previewImage(event) {
+            var reader = new FileReader();
+            reader.onload = function () {
+                var output = document.getElementById('profil-image-preview');
+                output.src = reader.result;
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        };
+    </script>
 
     <!-- DataTables JS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
