--- a/Layout/Dashboard/pages/scheduleItem.css
+++ b/Layout/Dashboard/pages/scheduleItem.css
@@ -101,36 +101,33 @@
   margin-left: -120px;
 }
 
-.modal-header {
-  border-bottom: none !important;
-}
 .modal-footer {
   margin-bottom: 20px; /* Adjust margin for footer */
   border-top: none !important;
   padding-bottom: 20px;
 }
-.modal-dialog {
-  position: fixed;
-  right: 20px; /* Adjust this value to move it horizontally */
-  width: 300px; /* Adjust the width as needed */
-  max-height: auto; /* Adjust the max height as needed */
-  float: right;
+
+/* Adjust dropdown position */
+.dropdown-menu {
+  right: 0;
+  left: auto;
 }
 
-.modal-content {
-  padding: 20px;
+/* Remove modal dialog positioning */
+.modal-dialog {
+  width: 300px; /* Adjust the width as needed */
+}
+
+/* Center the modal */
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-group {
   margin-bottom: 20px;
 }
-
-/*.modalformdivbtn {
-  position: absolute; /* Position absolute for positioning */
-/* left: 30px; /* Adjust this value to move the button to the left */
-/* bottom: 3px; /* Adjust this value to move the button vertically */
-/*}
-*/
 
 .modalformbutton {
   width: 300px;
@@ -142,4 +139,79 @@
 }
 .dropdown {
   margin-bottom: 60px; /* Adjust this value to provide space for the dropdown */
+}
+
+/* Custom CSS to remove border lines and adjust button alignment */
+.modal-content {
+  border: none; /* Remove all border lines */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  padding: 20px;
+}
+.modal-header {
+  border-bottom: none !important;
+}
+
+.modal-footer {
+  margin-top: 20px; /* Adjust margin for footer */
+  border-top: none !important;
+}
+
+.modal-footer .btn-secondary {
+  margin-right: 50px; /* Push "Disable" button to the left */
+}
+
+.modal-footer .btn-danger {
+  margin-left: 50px; /* Push "Close" button to the right */
+}
+.actionbutton {
+  width: 150px;
+}
+.modalformbutton {
+  width: 150px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.modalformbody {
+  position: relative;
+}
+.dropdown {
+  margin-bottom: 60px; /* Adjust this value to provide space for the dropdown */
+}
+
+/*modal for bag*/
+
+.amountTag {
+  font-size: large;
+  color: forestgreen;
+}
+.bagsavebtn {
+  width: 150px;
+  /* margin-right: 20px;
+  margin-bottom: 20px; */
+}
+.modal-footer {
+  justify-content: center !important;
+}
+/*.modal-dialog {
+  position: fixed;
+  right: 20px; /* Adjust this value to move it horizontally */
+/* width: 300px; /* Adjust the width as needed */
+/* max-height: auto; /* Adjust the max height as needed */
+/* float: right;
+}*/
+
+#cAmount {
+  float: right;
+}
+#tAmount {
+  float: right;
+}
+
+.totalTag {
+  font-size: large;
+  color: forestgreen;
 }
