--- a/Layout/Dashboard/pages/scheduleItem.html
+++ b/Layout/Dashboard/pages/scheduleItem.html
@@ -7,6 +7,8 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="scheduleItem.css" />
 
+
+
     <!-- DataTables CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
 
@@ -125,7 +127,8 @@
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">New Schedule</h1>
                     <div class="clientbtn">
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-plus"></i> Add New
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                            data-bs-target="#myModalForm"><i class="fa-solid fa-plus"></i> Add New
                             Schedule Item</button>
                     </div>
                 </div>
@@ -159,14 +162,245 @@
                                 <li><button class="dropdown-item" id="export-excel">Excel</button></li>
                                 <li><button class="dropdown-item" id="export-pdf">PDF</button></li>
                                 <li><button class="dropdown-item" id="export-print">Print</button></li>
-                                <li><button class="dropdown-item" id="delete-selected">Delete</button></li>
+
                             </ul>
                         </div>
                     </div>
 
                 </div>
 
+                <!-- The Modal for delete schedule -->
+                <div class="modal" id="deleteScheduleModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
 
+                            <!-- Modal Header -->
+                            <div class="modal-header ">
+                                <h4 class="modal-title ">Delete Schedule</h4>
+                                <!-- <button type="button" class="btn-close mr-50" data-bs-dismiss="modal"></button> -->
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body">
+                                Deleting a schedule removes all data. Confirm action before proceeding.
+                            </div>
+
+                            <!-- Modal footer -->
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary actionbutton"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-danger actionbutton"
+                                    data-bs-dismiss="modal">Delete</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- The Modal for schedule item -->
+                <div class="modal" id="myModalForm">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Add New Schedule Item</h4>
+                                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal"></button> -->
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body modalformbody">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="name">Total Amount:</label>
+                                        <input type="text" class="form-control" placeholder="Total Amount" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Logistic:</label>
+                                        <input type="text" class="form-control" placeholder="Logistic" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">No. of Bags:</label>
+                                        <input type="text" class="form-control" placeholder="No. of Bags:" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="to">From:</label>
+                                        <select class="form-select" id="sel1" name="sellist1">
+                                            <option disabled selected>From</option>
+                                            <option>Inter-State</option>
+                                            <option>End-to-End</option>
+                                            <option>Local</option>
+
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="to">To:</label>
+                                        <select class="form-select" id="sel1" name="sellist1">
+                                            <option disabled selected>To</option>
+                                            <option>GTBank, Surulere Branch</option>
+                                            <option>GTBank, Abule-Egba-Branch</option>
+                                            <option>GTBank, Yaba Branch</option>
+                                            <option>Texaco-Cash-Center</option>
+                                        </select>
+                                    </div>
+
+                                </form>
+                            </div>
+
+                            <!-- Modal footer -->
+                            <div class="modal-footer ">
+                                <div class="modalformdivbtn">
+                                    <button type="button" class="btn btn-danger modalformbutton "
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-success modalformbutton "
+                                        data-bs-dismiss="modal">Save</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- The Modal for add bag -->
+                <div class="modal fade" id="myModalBag" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Add Bag</h5>
+                                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button> -->
+                            </div>
+                            <div class="modal-body">
+                                <div class="table-striped">
+                                    <form>
+
+                                        <div class="row amountTag">
+                                            <div>
+                                                <p>
+                                                    <span>Total Fillable</span>
+
+                                                    <span id="cAmount">&#8358; 10,000,000.00</span>
+                                                </p>
+                                            </div>
+
+                                        </div>
+                                        <table class="table table-striped ">
+                                            <thead class="table-secondary">
+                                                <tr>
+                                                    <th>S/N</th>
+                                                    <th>Seal Code</th>
+                                                    <th>Amount</th>
+                                                    <th>QRCode</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td><img width="50" height="50" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td><img width="50" height="50" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td><img width="50" height="50" /></td>
+                                                </tr>
+                                            </tbody>
+                                            <tfoot>
+                                                <tr>
+                                                    <td><span class="totalTag">Total</span></td>
+                                                    <td><span class="totalTag" id="tAmount">&#8358; 10,000,000.00</span>
+                                                    </td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
+                                            </tfoot>
+                                        </table>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+
+                                <button type="button" class="btn btn-secondary bagsavebtn">Cancel</button>
+                                <button type="button" class="btn btn-success bagsavebtn">Save</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- The Modal  for update Schedule item-->
+                <div class="modal" id="myModalScheduleItem">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Update Schedule Item</h4>
+                                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal"></button> -->
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body modalformbody">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="name">Total Amount:</label>
+                                        <input type="text" class="form-control" placeholder="Total Amount" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Logistic:</label>
+                                        <input type="text" class="form-control" placeholder="Logistic" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">No. of Bags:</label>
+                                        <input type="text" class="form-control" placeholder="No. of Bags:" id="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="to">From:</label>
+                                        <select class="form-select" id="sel1" name="sellist1">
+                                            <option disabled selected>From</option>
+                                            <option>Inter-State</option>
+                                            <option>End-to-End</option>
+                                            <option>Local</option>
+
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="to">To:</label>
+                                        <select class="form-select" id="sel1" name="sellist1">
+                                            <option disabled selected>To</option>
+                                            <option>GTBank, Surulere Branch</option>
+                                            <option>GTBank, Abule-Egba-Branch</option>
+                                            <option>GTBank, Yaba Branch</option>
+                                            <option>Texaco-Cash-Center</option>
+                                        </select>
+                                    </div>
+
+                                </form>
+                            </div>
+
+                            <!-- Modal footer -->
+                            <div class="modal-footer ">
+                                <div class="modalformdivbtn">
+                                    <button type="button" class="btn btn-danger modalformbutton "
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-success modalformbutton "
+                                        data-bs-dismiss="modal">Save</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
 
                 <div class="table-responsive clienttable">
                     <table id="myTable" class="table table-striped display">
@@ -202,12 +436,17 @@
                                         data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h"
                                             aria-hidden="true"></i></span>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
-                                        <li><a class="dropdown-item" href="#"><i class="fa fa-pencil"
-                                                    aria-hidden="true"></i> Updates</a></li>
-                                        <li><a class="dropdown-item" href="#"><i class="fa fa-shopping-bag"
-                                                    aria-hidden="true"></i> Add Bag</a></li>
-                                        <li><a class="dropdown-item text-danger" href="#"><i class="fa fa-trash"
-                                                    aria-hidden="true"></i> Delete</a></li>
+                                        <li><a class="dropdown-item" data-bs-toggle="modal"
+                                                data-bs-target="#myModalScheduleItem" href="#"><i class="fa fa-pencil"
+                                                    aria-hidden="true"></i> Updates</a>
+                                        </li>
+                                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#myModalBag"
+                                                href="#"><i class="fa fa-shopping-bag" aria-hidden="true"></i> Add
+                                                Bag</a></li>
+                                        <li><a class="dropdown-item text-danger btn btn-link delete-btn"
+                                                data-bs-toggle="modal" data-bs-target="#deleteScheduleModal"
+                                                id="delete-selected" href="#">
+                                                <i class="fa fa-trash" aria-hidden="true"></i> Delete</a></li>
                                     </ul>
                                 </td>
                             </tr>
