--- a/Layout/Dashboard/pages/scheduletable.css
+++ b/Layout/Dashboard/pages/scheduletable.css
@@ -100,3 +100,31 @@
 #export-dropdown {
   margin-left: -120px;
 }
+
+/* Custom CSS to remove border lines and adjust button alignment */
+.modal-content {
+  border: none; /* Remove all border lines */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+.modal-header {
+  border-bottom: none !important;
+}
+.modal-footer {
+  margin-top: 20px; /* Adjust margin for footer */
+  border-top: none !important;
+}
+
+.modal-footer .btn-secondary {
+  margin-right: 20px; /* Push "Disable" button to the left */
+}
+
+.modal-footer .btn-danger {
+  margin-left: 20px; /* Push "Close" button to the right */
+}
+.actionbutton {
+  width: 150px;
+}
