--- a/Layout/Modal/pages/modalform.css
+++ b/Layout/Modal/pages/modalform.css
@@ -40,3 +40,40 @@
 .dropdown {
   margin-bottom: 60px; /* Adjust this value to provide space for the dropdown */
 }
+
+/* .user-profile {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #ccc; 
+  border-radius: 50px;
+  background: var(
+    --avatar-tom-cook,
+    url("../assets/images/avatar.jpeg") 50% / cover no-repeat
+  );
+} */
+.user-profile {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #ccc;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#profile-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+#profile-image-preview {
+  max-width: 100%;
+  max-height: 100%;
+}
