--- a/Layout/Modal/pages/disableModal.html
+++ b/Layout/Modal/pages/disableModal.html
@@ -26,28 +26,29 @@
         </button>
     </div>
 
-    <!-- The Modal -->
+    <!-- The Disable Modal -->
     <div class="modal" id="disabledModal">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
 
                 <!-- Modal Header -->
-                <div class="modal-header ">
-                    <h4 class="modal-title ">Disable Client</h4>
+                <div class="modal-header" >
+                    <h4 class="modal-title">Disable Client</h4>
                     <!-- <button type="button" class="btn-close mr-50" data-bs-dismiss="modal"></button> -->
                 </div>
 
                 <!-- Modal body -->
-                <div class="modal-body">
+                <div class="modal-body" >
                     Are you sure you want to disable this client
                 </div>
 
                 <!-- Modal footer -->
 
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary actionbutton"
-                        data-bs-dismiss="modal">Disable</button>
-                    <button type="button" class="btn btn-danger actionbutton" data-bs-dismiss="modal">Close</button>
+                <div class="modal-footer" >
+                    <button type="button" class="btn btn-secondary actionbutton" data-bs-dismiss="modal"
+                        >Disable</button>
+                    <button type="button" class="btn btn-danger actionbutton" data-bs-dismiss="modal"
+                        >Close</button>
                 </div>
 
             </div>
