--- a/Layout/Modal/pages/editClientProfileModal.html
+++ b/Layout/Modal/pages/editClientProfileModal.html
@@ -20,7 +20,7 @@
         Open Modal
     </button>
 
-    <!-- Modal -->
+    <!-- Modal for client edit -->
     <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
