--- a/Layout/Modal/pages/enableModal.html
+++ b/Layout/Modal/pages/enableModal.html
@@ -26,7 +26,7 @@
         </button>
     </div>
 
-    <!-- The Modal -->
+    <!-- The Enable Modal -->
     <div class="modal" id="enabledModal">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
