--- a/Layout/Dashboard/pages/clientMgtDashboard.css
+++ b/Layout/Dashboard/pages/clientMgtDashboard.css
@@ -76,10 +76,14 @@
 }
 .tablebtn {
   position: absolute; /* Position absolute for positioning */
-  top: 150px; /* Distance from the bottom */
+  top: 180px; /* Distance from the bottom */
   right: -125px; /* Position at the right */
   color: #ffffff;
   width: 570px;
+}
+.filterclitbtn {
+  width: 117px;
+  background-color: #fff !important;
 }
 
 .clienttable {
@@ -98,6 +102,7 @@
   border-top: none !important;
   padding-bottom: 20px;
 }
+
 /*.modal-dialog {
   position: fixed;
   right: 20px; /* Adjust this value to move it horizontally */
@@ -207,4 +212,295 @@ td a {
 }
 .infopics {
   margin-left: 15px;
+}
+
+/* css for client profile */
+
+.banktitle {
+  position: absolute; /* Position absolute for positioning */
+  top: 33px; /* Distance from the bottom */
+  left: 125px;
+  float: left;
+}
+.adcadtitle {
+  margin-bottom: 16px;
+  display: inline-block;
+  overflow-wrap: break-word;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+  font-weight: var(--bodyLargeLargeRegular-font-weight, 200);
+  font-size: var(--bodyLargeLargeRegular-font-size, 20px);
+  line-height: var(--bodyLargeLargeRegular-line-height, 1.4);
+}
+.dateTag-banktitle {
+  position: absolute; /* Position absolute for positioning */
+  top: 58px; /* Distance from the bottom */
+  left: 125px;
+  float: left;
+}
+.bank-profile {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #ccc; /* Change to your desired color */
+  border-radius: 50px;
+  background: var(
+    --avatar-tom-cook,
+    url("../assets/images/image8.png") 50% / cover no-repeat
+  );
+}
+.nav-link.active,
+.nav-link:hover {
+  font-weight: 500;
+}
+#restprofilepassword {
+  width: 80px;
+}
+.form-group {
+  margin-top: 15px;
+}
+.fg2 {
+  margin-top: 95px;
+}
+#profileIdbtn {
+  width: 80px;
+  height: 40px;
+  margin-left: 10px;
+}
+.modal-footer {
+  float: left;
+  margin-top: 15px;
+  border-top: none !important;
+}
+
+.modalformbutton {
+  width: 150px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+/* .statusDot {
+  display: flex;
+  align-items: center;
+}
+.statusDotIcon {
+  margin-right: 10px;
+  margin-top: -24px;
+} */
+/* 
+* {
+  box-sizing: border-box;
+} */
+
+body {
+  background-color: #474e5d;
+  font-family: Helvetica, sans-serif;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #474e5d;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  background-color: #474e5d;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -6px;
+}
+
+/* Container around content */
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+  margin-bottom: 50%;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+
+/* The circles on the timeline */
+.container::after {
+  content: "";
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  right: -17px;
+  background-color: #474e5d;
+  top: 19px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 15px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid rgb(69, 68, 68);
+  border-width: 10px 10px 10px 0;
+  border-color: transparent rgb(40, 39, 39) transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -11px;
+}
+
+/* The actual content */
+.content {
+  padding-top: 5px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+  margin-right: 80px;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+  /* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid rgb(60, 59, 59);
+    border-width: 10px 10px 10px 0;
+    border-color: transparent rgb(40, 39, 39) transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .right::after {
+    left: 15px;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
+  }
+}
+.updateClientStatus {
+  margin-top: 60px;
+  margin-left: 50px;
+  font-weight: 600;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+.updateClientStatusdiv {
+  margin-left: 10px;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+.addClientStatusdiv {
+  margin-left: 10px;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+.addClientStatus {
+  margin-top: 25px;
+  margin-left: 50px;
+  font-weight: 600;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+.clientStatusDetails {
+  margin-top: 20px;
+  margin-left: 50px;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+#penbutton {
+  color: #474e5d;
+}
+.clientInfoDetails {
+  margin-top: 10px;
+  font-weight: bold;
+  font-family: var(--bodyLargeLargeRegular-font-family, "Mona Sans");
+}
+
+/* Custom CSS to remove border lines and adjust button alignment */
+.modal-content {
+  border: none; /* Remove all border lines */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+#delmodalcontent {
+  border: none; /* Remove all border lines */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.modal-header {
+  border-bottom: none !important;
+}
+#delmodalheader {
+  border-bottom: none !important;
+}
+.modal-footer {
+  margin-top: 20px; /* Adjust margin for footer */
+  border-top: none !important;
+}
+#delmodalfooter {
+  margin-top: 20px; /* Adjust margin for footer */
+  border-top: none !important;
+}
+
+.modal-footer .btn-secondary {
+  margin-right: 50px; /* Push "Disable" button to the left */
+}
+
+.modal-footer .btn-danger {
+  margin-left: 50px; /* Push "Close" button to the right */
+}
+.actionbutton {
+  width: 150px;
+}
+#delmodalactionbtn {
+  width: 150px;
+}
+
+
+/* modal filter */
+#filterdialogmodal {
+  position: fixed;
+  right: 20px; /* Adjust this value to move it horizontally */
+  width: 300px; /* Adjust the width as needed */
+  max-height: auto; /* Adjust the max height as needed */
+  float: right;
+}
+#modalformbody {
+  position: relative;
+}
+#modalformbutton {
+  width: 225px;
+  margin-right: 2px;
+  margin-bottom: 20px;
 }
