--- a/Layout/Modal/pages/clientProfileModal.html
+++ b/Layout/Modal/pages/clientProfileModal.html
@@ -16,11 +16,11 @@
 <body>
 
     <!-- Button to trigger modal -->
-    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profileModal">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profileModal">
         Open Modal
-    </button> -->
+    </button>
 
-    <!-- Modal -->
+    <!-- Modal for client -->
     <div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
@@ -59,8 +59,9 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <h5 class="mt-5 mb-4 ">Basic Info
-                                        &nbsp;&nbsp; <a class="button" id="penbutton" href="#"><i
-                                                class="fa fa-pencil-square" aria-hidden="true"></i></a>
+                                        &nbsp;&nbsp; <a class="button" id="penbutton" href="" data-bs-toggle="modal"
+                                            data-bs-target="#editProfileModal"><i class="fa fa-pencil-square"
+                                                aria-hidden="true"></i></a>
                                     </h5>
                                     <form>
                                         <div class="form-group">
@@ -169,6 +170,294 @@
                                             <div class="clientInfoDetails">
                                                 <p>Lagos</p>
                                             </div>
+                                        </div>
+                                    </form>
+
+                                </div>
+                            </div>
+                            <!-- Modal footer -->
+                            <div class="modal-footer ">
+                                <!-- <div class="btnfooter">
+                                    <button type="button" class="btn btn-light modalformbutton "
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-success modalformbutton "
+                                        data-bs-dismiss="modal">Save</button>
+                                </div> -->
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <div class="row">
+                                <div class="col-md-4">
+
+                                    <div class="timeline mt-5 mb-4">
+                                        <div class="container right">
+                                            <div class="content">
+
+                                                <h6>2024-04-18</h6>
+                                                <p>16:36:28</p>
+
+                                            </div>
+                                        </div>
+                                        <div class="container right">
+                                            <div class="content">
+
+                                                <h6>2024-04-18</h6>
+                                                <p>16:36:28</p>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="updateClientStatusdiv">
+                                        <div class="updateClientStatus">
+                                            <p>Updates Client</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Client Type &nbsp; : &nbsp; CIT</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Client Name &nbsp; : &nbsp; Guarantee Trust Bank</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Address &nbsp; : &nbsp; 50, Sholanke Street</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>City &nbsp; : &nbsp; Ikeja</p>
+                                        </div>
+                                    </div>
+                                    <div class="addClientStatusdiv">
+                                        <div class="addClientStatus">
+                                            <p>Add Client</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Client Type &nbsp; : &nbsp; CIT</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Client Name &nbsp; : &nbsp; Guarantee Trust Bank</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Address &nbsp; : &nbsp; 50, Sholanke Street</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>City &nbsp; : &nbsp; Ikeja</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>First Name &nbsp; : &nbsp; Salisu</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Last Name &nbsp; : &nbsp; Oluwaseun</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Phone Number &nbsp; : &nbsp; 08135384788</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Email &nbsp; : &nbsp; oluwaseunsalisu1@gmail.com</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Gender &nbsp; : &nbsp; Male</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>Address &nbsp; : &nbsp; 50, Sholanke Street</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>City &nbsp; : &nbsp; Ikeja</p>
+                                        </div>
+                                        <div class="clientStatusDetails">
+                                            <p>State &nbsp; : &nbsp; Lagos</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal footer -->
+                            <div class="modal-footer ">
+                                <!-- <div class="btnfooter">
+                                    <button type="button" class="btn btn-light modalformbutton "
+                                        data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-success modalformbutton "
+                                        data-bs-dismiss="modal">Save</button>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Modal for client edit -->
+    <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <!-- <h5 class="modal-title" id="exampleModalLabel">Modal with Tabs</h5> -->
+
+                    <!-- User profile picture -->
+                    <div class="bank-profile modal-title" id="exampleModalLabel">
+                    </div>
+                    <div class="card-title adcadtitle banktitle d-flex">
+                        Gurantee
+                        Trust Bank
+                    </div>
+                    <div class="dateTag-banktitle d-flex">
+                        <p>Created in 2024-04-04 04:54:41</p>
+                    </div>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
+                                type="button" role="tab" aria-controls="home" aria-selected="true">Client
+                                Profile</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
+                                type="button" role="tab" aria-controls="profile" aria-selected="false">Status
+                                Record</button>
+                        </li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h5 class="mt-5 mb-4 ">Basic Info
+                                        &nbsp;&nbsp; <a class="button" id="penbutton" href="#"><i
+                                                class="fa fa-pencil-square" aria-hidden="true"></i></a>
+                                    </h5>
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="name">Client Type</label>
+                                            <select class="form-select" id="sel1" name="sellist1">
+                                                <option disabled selected>Select Type</option>
+                                                <option>CIT</option>
+                                                <option>Retailer</option>
+                                                <option>Vault</option>
+
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Client Name</label>
+                                            <input type="text" class="form-control" placeholder="Client Name" id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Password</label>
+                                            <div>
+                                                <input type="reset" class="form-control btn btn-light"
+                                                    id="restprofilepassword" value="Reset">
+                                            </div>
+
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">City</label>
+                                            <select class="form-select" id="sel1" name="sellist1">
+                                                <option disabled selected>Select City</option>
+                                                <option>Agege</option>
+                                                <option>Ikeja</option>
+                                                <option>Ogba</option>
+                                                <option>Ketu</option>
+                                                <option>Opebi</option>
+                                                <option>Bergar</option>
+
+                                            </select>
+                                        </div>
+                                        <h5 class="mt-5 mb-4 ">Contact Information</h5>
+                                        <div class="form-group">
+                                            <label for="name">First Name</label>
+                                            <input type="text" class="form-control" placeholder="First Name" id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Phone Number</label>
+                                            <input type="text" class="form-control" placeholder="Phone Number"
+                                                id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Gender</label>
+                                            <select class="form-select" id="sel1" name="sellist1">
+                                                <option disabled selected>Select Gender</option>
+                                                <option>Male</option>
+                                                <option>Female</option>
+
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">City</label>
+                                            <select class="form-select" id="sel1" name="sellist1">
+                                                <option disabled selected>Select City</option>
+                                                <option>Agege</option>
+                                                <option>Ikeja</option>
+                                                <option>Ogba</option>
+                                                <option>Ketu</option>
+                                                <option>Opebi</option>
+                                                <option>Bergar</option>
+
+                                            </select>
+                                        </div>
+                                    </form>
+
+
+                                </div>
+                                <div class="col-md-6">
+                                    <form>
+                                        <div class="form-group fg2">
+                                            <label for="name">Client ID</label>
+                                            <div>
+                                                <span class="profileID">gdhhnsbsi36748rjf9r94u8r4ty558</span>
+                                                <input type="reset" class="form-control btn btn-light" id="profileIdbtn"
+                                                    value="Copy">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Client Email</label>
+                                            <input type="email" class="form-control" placeholder="Client Email"
+                                                id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Address</label>
+                                            <input type="text" class="form-control" placeholder="Address" id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">State</label>
+                                            <select class="form-select" id="sel1" name="sellist1">
+                                                <option disabled selected>Select State</option>
+                                                <option>Lagos</option>
+                                                <option>Osun</option>
+                                                <option>Ogun</option>
+                                                <option>Kano</option>
+                                                <option>Kwara</option>
+                                                <option>Jigawa</option>
+
+                                            </select>
+                                        </div>
+                                        <div class="form-group fg2">
+                                            <label for="name">Last Name</label>
+                                            <input type="text" class="form-control" placeholder="Last Name" id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Email Address</label>
+                                            <input type="email" class="form-control" placeholder="Email Address"
+                                                id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">Address</label>
+                                            <input type="text" class="form-control" placeholder="Address" id="name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="name">State</label>
+                                            <select class="form-select" id="sel1" name="sellist1">
+                                                <option disabled selected>Select State</option>
+                                                <option>Lagos</option>
+                                                <option>Osun</option>
+                                                <option>Ogun</option>
+                                                <option>Kano</option>
+                                                <option>Kwara</option>
+                                                <option>Jigawa</option>
+
+                                            </select>
                                         </div>
                                     </form>
 
