add bid and advert

--- a/Layout/Dashboard/pages/vaultBalance.html
+++ b/Layout/Dashboard/pages/vaultBalance.html
@@ -126,41 +126,7 @@
                     <h1 class="h2">Vaulted Balance</h1>
 
                 </div>
-                <!-- Filtering options -->
-                <div class="row mb-3 tablebtn">
-                    <!-- Date Range Input -->
-                    <div class="col-md-3">
-                        <input type="date" class="form-control" id="startDate" name="startDate">
-                    </div>
-                    <div class="col-md-3">
-                        <input type="date" class="form-control" id="endDate" name="endDate">
-                    </div>
 
-                    <div class="col-md-3">
-                        <select class="form-select" id="status-filter">
-                            <option value="">All Status</option>
-                            <option value="enable">Approved</option>
-                            <option value="disable">Pending</option>
-                        </select>
-                    </div>
-                    <!-- Export dropdown -->
-                    <div class="col-md-3">
-                        <div class="dropdown">
-                            <button class="btn btn-success dropdown-toggle" type="button" id="export-dropdown"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Export
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="export-dropdown">
-                                <li><button class="dropdown-item" id="export-copy">Copy</button></li>
-                                <li><button class="dropdown-item" id="export-csv">CSV</button></li>
-                                <li><button class="dropdown-item" id="export-excel">Excel</button></li>
-                                <li><button class="dropdown-item" id="export-pdf">PDF</button></li>
-                                <li><button class="dropdown-item" id="export-print">Print</button></li>
-                                <li><button class="dropdown-item" id="delete-selected">Delete</button></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
 
 
 
@@ -190,7 +156,7 @@
                                 <td><a href="" data-bs-toggle="modal" data-bs-target="#vaultDetailsModal">24-01-2024
                                         10:00:pm</a></td>
                                 <td><a href="" data-bs-toggle="modal"
-                                        data-bs-target="##vaultDetailsModal">Shonebiolawale@codeprosol.com</a></td>
+                                        data-bs-target="#vaultDetailsModal">Shonebiolawale@codeprosol.com</a></td>
 
                             </tr>
 
